<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="Login" type="com.example.hyperlink.Login_Activity"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@id/const_create"
        android:background="@drawable/login_bg">
        
        
   

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/login_startmagin"
        android:layout_marginStart="@dimen/login_startmagin"
        android:layout_marginRight="@dimen/login_startmagin"
        android:layout_marginEnd="@dimen/login_startmagin">





    <ImageView
        android:id="@+id/image"
        android:layout_width="75.23dp"
        android:layout_height="71.49dp"
        android:layout_marginTop="167dp"
        app:srcCompat="@drawable/login_icon"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_wlcome"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:text="@string/welcome_back_to"
        android:fontFamily="@font/montserrat_light"
        android:textSize="22dp"
        android:layout_marginTop="287dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/txt_logincont"
        android:layout_width="119dp"
        android:layout_height="16dp"
        android:text="@string/login_to_continue"
        android:textSize="13dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="334dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />


        <RelativeLayout
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="396dp"
            >
            
            <ImageView
                android:layout_width="12.89dp"
                android:layout_height="9.89dp"
                app:srcCompat="@drawable/mail_icon"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp" />
            
            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:textColor="#A6A7B1"
                android:textSize="12dp"
                android:lines="1"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColorHighlight="@android:color/transparent"
                android:nextFocusDown="@id/edit_password"
                android:hint="@string/email"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="42dp"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/montserrat_regular"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="315dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="456dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="11.39dp"
                android:layout_height="11.39dp"
                app:srcCompat="@drawable/key_icon"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="#A6A7B1"
                android:lines="1"
                android:maxLines="1"
                android:textSize="12dp"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="42dp"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/montserrat_regular"/>

        </RelativeLayout>
        
        
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="131dp"
            android:layout_height="48dp"
            android:text="@string/login"
            android:layout_marginTop="534dp"
            android:onClick="loginclick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangle_red"/>
    
        <TextView
            android:layout_width="110dp"
            android:layout_height="15dp"
            android:textSize="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="549dp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/forgot_password"/>

    
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_create"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FFFFFF" >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="15.2dp"
                android:layout_height="13.6dp"
                app:srcCompat="@drawable/user_icon" />
            
            <TextView
                android:id="@+id/txt_creatacount"
                android:layout_width="123dp"
                android:layout_height="15dp"
                android:textColor="#FD5D60"
                android:textSize="12dp"
                android:layout_toRightOf="@id/img_user"
                android:layout_toEndOf="@id/img_user"
                android:layout_marginStart="5dp"
                android:text="@string/create_new_account"
                android:layout_marginLeft="5dp" />
        </RelativeLayout>
        


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>