<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
   <data>
       <variable name="User" type="com.example.hyperlink.User"/>
   </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/signup_startmagin"
        android:layout_marginEnd="@dimen/signup_startmagin"
        android:layout_marginStart="@dimen/signup_startmagin"
        android:layout_marginLeft="@dimen/signup_startmagin">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
            
            <ImageView
                android:layout_width="14.22dp"
                android:layout_height="13.6dp"
                app:srcCompat="@drawable/ic_back"
                android:layout_marginTop="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txt_create"
            android:layout_width="128dp"
            android:layout_height="59dp"
            android:layout_marginTop="119dp"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/create_new_account"
            android:textColor="#000000"
            android:textSize="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="132dp"
            android:layout_height="16dp"
            android:textColor="#A6A7B1"
            android:textSize="13dp"
            android:fontFamily="@font/montserrat_light"
            android:layout_marginTop="181dp"
            android:text="@string/sign_up_to_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


            <RelativeLayout
                android:id="@+id/rel_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="227dp"
                >


                <EditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:textColor="#A6A7B1"
                    android:textSize="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:fontFamily="@font/montserrat_regular"/>



            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="284dp"
                >


                <TextView
                    android:id="@+id/txt_countrycode"
                    android:layout_width="34dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="#A6A7B1"
                    android:textSize="12dp"
                    android:text="+1 CA"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:fontFamily="@font/montserrat_regular"/>

                
                <ImageView
                    android:id="@+id/img_spinner"
                    android:layout_width="7.74dp"
                    android:layout_height="4.36dp"
                    android:layout_toRightOf="@id/txt_countrycode"
                    app:srcCompat="@drawable/ic_spinner"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/txt_countrycode" />

                <EditText
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:textColor="#A6A7B1"
                    android:textSize="12dp"
                    android:inputType="phone"
                    android:background="@android:color/transparent"
                    android:hint="@string/phone_number"
                    android:layout_toRightOf="@+id/img_spinner"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_toEndOf="@+id/img_spinner" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="341dp"

                >


                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:textColor="#A6A7B1"
                    android:textSize="12dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/email_id"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:fontFamily="@font/montserrat_regular"/>



            </RelativeLayout>

            <RelativeLayout
            android:id="@+id/rel_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rectangle_white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="398dp">


            <EditText
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:singleLine="true"
                android:layout_gravity="center_vertical"
                android:textColor="#A6A7B1"
                android:textSize="12sp"
                android:hint="@string/password"
                android:layout_centerVertical="true"
                android:layout_marginLeft="19dp"
                android:layout_marginStart="19dp"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/img_eye"
                android:layout_toStartOf="@id/img_eye"
                android:fontFamily="@font/montserrat_regular"/>

            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="14.03dp"
                android:layout_height="8.36dp"
                app:srcCompat="@drawable/ic_eye"
                android:layout_centerVertical="true"
                android:layout_marginEnd="26dp"
                android:layout_marginRight="26dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_Address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/rectangle_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="455dp">


                <EditText
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:singleLine="true"
                    android:layout_gravity="center_vertical"
                    android:textColor="#A6A7B1"
                    android:textSize="12sp"
                    android:hint="@string/address"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:background="@android:color/transparent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@id/img_map"
                    android:layout_toStartOf="@id/img_map"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/montserrat_regular"
                    />

                <ImageView
                    android:id="@+id/img_map"
                    android:layout_width="10.93dp"
                    android:layout_height="15.08dp"
                    app:srcCompat="@drawable/ic_mapicon"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="532dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chk_rect"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:scaleX="0.50"
                    android:scaleY="0.50"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="19dp"
                    android:layout_marginLeft="19dp"
                    android:background="@drawable/greyimg"
                   />
                <TextView
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_text"
                    android:textColor="#A6A7B1"
                    android:textSize="12sp"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:gravity="center_vertical"
                    app:layout_constraintStart_toEndOf="@+id/chk_rect"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                
                


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createaccount"
                android:layout_width="161dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@android:color/white"
                android:textSize="12dp"

                android:background="@drawable/rectangle_blue"
                android:layout_marginTop="584dp"
                android:text="@string/create_account"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>